# vivarium

./: .coderabbit.yaml  .gitignore  .mise.toml  .rumdl.toml  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  mise.toml
.claude/: CLAUDE.md  launch.json
.claude/rules/: recipe-authoring.md  upstream-issue-selection.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  reproduction_request.yml  task.yml
.github/workflows/: branch-fix-verdict.yml  claude-implement.yml  claude-respond-to-coderabbit.yml  claude-review.yml  commitlint.yml  deploy-docs.yml  labeler.yml  lint-autofix.yml  phase4-rr-replay-poc.yml  project-fields-backfill.yml  project-fields.yml  publish-mcp.yml  release.yml  repro-regression.yml  seed-state.yml  terraform-apply.yml  terraform-plan.yml  terraform-state-backup.yml  test-docs-build.yml  test-docs-e2e.yml  test-docs.yml  test-lint-check.yml  test-mcp.yml  tofu-fmt-autofix.yml  vivarium-verdict-self-test.yml  vivarium-verdict.yml
docs/: NON_GOALS.md  VISION.md  _meta.json  _nav.json  ai-workflow.md  architecture.md  biome.json  non-goals.md  package.json  playwright.config.ts  rspress.config.ts  tsconfig.json  vision.md
docs/DECISIONS/: ADR-0001-problem-centred-framing.md  ADR-0002-three-layer-architecture.md  ADR-0004-sapling-over-git.md  (+6 more)
scripts/: build-layer1-wheels.sh  capture_layer2_verdict.sh
src/: README.md
src/layer1_wasm/regex-779/: Cargo.toml  README.md  index.html  recipe.json  repro.ts
src/layer1_wasm/regex-779/src/: main.rs
(+311 files in other folders)
